--- a/script/data_analysis.ipynb
+++ b/script/data_analysis.ipynb
@@ -29,13 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "id": "876f92b8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "load <- readRDS(\"NTT_Data_norm_2021_2022_latest.rds\")\n",
-    "data_int <- load$data_integrated_norm_2021_2022\n",
+    "data_int <- `load$data_integrated_norm_2021_2022`\n",
     "data_soil <- load$data_integrated_norm_2021_2022\n",
     "\n",
     "\n",
@@ -588,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "04134e58",
+   "id": "183ea37a",
    "metadata": {},
    "outputs": [
     {
