--- a/script/data_analysis.ipynb
+++ b/script/data_analysis.ipynb
@@ -29,27 +29,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "id": "876f92b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "load <- readRDS(\"NTT_Data_norm_2021_2022_latest.rds\")\n",
-    "data_int <- `load$data_integrated_norm_2021_2022`\n",
+    "\n",
+    "data_int <- load$data_integrated_norm_2021_2022\n",
+    "\n",
     "data_soil <- load$data_integrated_norm_2021_2022\n",
     "\n",
-    "\n",
     "meta_int <- load$features_integrated_norm_2021_2022\n",
+    "\n",
     "meta_soil <- load$features_integrated_norm_2021_2022\n",
     "\n",
     "v_cate <- unique(meta_int$Category)\n",
     "\n",
     "# remove paired-field data\n",
     "model_id <- read.csv(\"model_id.csv\")$model_id\n",
+    "\n",
     "data_int_model <- data_int[data_int$Sample_ID %in% model_id,]\n",
+    "\n",
     "data_soil_model <- data_soil[data_soil$Sample_ID %in% model_id,]\n",
+    "\n",
     "data_int <- data_int[!data_int$Sample_ID %in% model_id,]\n",
+    "\n",
     "data_soil <- data_soil[!data_soil$Sample_ID %in% model_id,]\n"
    ]
   },
@@ -161,7 +167,9 @@
     "  ))\n",
     "  \n",
     "  m <- bal.tab(weights)\n",
+    "    \n",
     "  mean_smd <- mean(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
+    "    \n",
     "  max_smd <- max(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
     "  \n",
     "  df$w <- weights$weights\n",
@@ -589,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "183ea37a",
+   "id": "7c758d99",
    "metadata": {},
    "outputs": [
     {
