LaTeX italic to code

--- a/script/data_analysis.ipynb
+++ b/script/data_analysis.ipynb
@@ -34,16 +34,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "load <- readRDS(\"NTT_Data_norm_2021_2022_latest.rds\")\n",
     "\n",
-    "data_int <- load$data_integrated_norm_2021_2022\n",
+    "`data_int <- load$data_integrated_norm_2021_2022`\n",
     "\n",
-    "data_soil <- load$data_integrated_norm_2021_2022\n",
+    "`data_soil <- load$data_integrated_norm_2021_2022`\n",
     "\n",
-    "meta_int <- load$features_integrated_norm_2021_2022\n",
+    "`meta_int <- load$features_integrated_norm_2021_2022`\n",
     "\n",
-    "meta_soil <- load$features_integrated_norm_2021_2022\n",
+    "`meta_soil <- load$features_integrated_norm_2021_2022`\n",
     "\n",
     "v_cate <- unique(meta_int$Category)\n",
     "\n",
@@ -56,7 +55,7 @@
     "\n",
     "data_int <- data_int[!data_int$Sample_ID %in% model_id,]\n",
     "\n",
-    "data_soil <- data_soil[!data_soil$Sample_ID %in% model_id,]\n"
+    "data_soil <- data_soil[!data_soil$Sample_ID %in% model_id,]"
    ]
   },
   {
@@ -168,13 +167,13 @@
     "  \n",
     "  m <- bal.tab(weights)\n",
     "    \n",
-    "  mean_smd <- mean(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
+    "  `mean_smd <- mean(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))`\n",
     "    \n",
-    "  max_smd <- max(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
+    "  `max_smd <- max(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))`\n",
     "  \n",
-    "  df$w <- weights$weights\n",
-    "  propensity_scores <- weights$ps  # 重み付けモデルから取得\n",
-    "  true_labels <- df$Category  # 実際の処置ラベル（0 or 1）\n",
+    "  `df$w <- weights$weights`\n",
+    "  `propensity_scores <- weights$ps`  # 重み付けモデルから取得\n",
+    "  `true_labels <- df$Category`  # 実際の処置ラベル（0 or 1）\n",
     "  \n",
     "  if (!is.null(propensity_scores)) {\n",
     "    roc_obj <- roc(response = true_labels, predictor = propensity_scores)\n",
@@ -214,10 +213,10 @@
     "  ))\n",
     "  \n",
     "  m <- bal.tab(weights)\n",
-    "  mean_smd <- mean(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
-    "  max_smd <- max(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))\n",
+    "  `mean_smd <- mean(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))`\n",
+    "  `max_smd <- max(abs(m$Balance$Diff.Adj[2:nrow(m$Balance)]))`\n",
     "  \n",
-    "  df$w <- weights$weights\n",
+    "  `df$w <- weights$weights`\n",
     "  propensity_scores <- weights$ps  \n",
     "  true_labels <- df$Category\n",
     "  if (!is.null(propensity_scores)) {\n",
@@ -228,7 +227,7 @@
     "  }\n",
     "  \n",
     "  df_weighted <- cbind(df, vmat)\n",
-    "  df_weighted$Category <- ifelse(df_weighted$Category == control, 0, 1)\n",
+    "  `df_weighted$Category <- ifelse(df_weighted$Category == control, 0, 1)`\n",
     "\n",
     "  g <- love.plot(weights,\n",
     "                 stats = \"mean.diffs\",\n",
@@ -391,17 +390,17 @@
     "                c(\"Soil_Domestic_level1E\", \"Che-R-Org-R\", \"Diff.Adj\",NA),\n",
     "                c(\"Soil_Domestic_level1E\", \"Che-R-Org-R\", \"Diff.Adj\",NA)\n",
     "                )\n",
-    "result$value <- as.numeric(result$value)\n",
-    "result$covariate <- factor(result$covariate, levels = rev(unique(result$covariate)))\n",
+    "`result$value <- as.numeric(result$value)`\n",
+    "`result$covariate <- factor(result$covariate, levels = rev(unique(result$covariate)))`\n",
     "\n",
-    "result$name <- factor(result$name, levels = c(\"Diff.Un\", \"Diff.Adj\"),\n",
+    "`result$name <- factor(result$name, levels = c(\"Diff.Un\", \"Diff.Adj\"),`\n",
     "                      labels = c(\"Unadjusted\", \"Adjusted\"))\n",
     "\n",
-    "result$covariate <- factor(result$covariate,\n",
+    "`result$covariate <- factor(result$covariate,`\n",
     "                           levels = rev(unique(result$covariate)),\n",
     "                           labels = rev(c(\"Mean temperature\", \"Annual precipitation\", \"Sunshine duration\", \"Age\", \"Cultivar: extra early-maturing\", \"Cultivar: early-maturing\", \"Cultivar: mid-maturing\", \"Cultivar: late-maturing\", \"Soil type: Dark Red soil\", \"Soil type: Lowland soil\", \"Soil type: Red-Yellow soil\", \"Soil type: Brown Forest soil\", \"Soil type: Young soil\")))\n",
     "\n",
-    "result$data <- factor(result$data, levels = c(\"CHe-C-Org-C\",\"Org-C-Org-C\",\"Non-N-Non-N\",\"Che-R-Org-R\"))\n",
+    "`result$data <- factor(result$data, levels = c(\"CHe-C-Org-C\",\"Org-C-Org-C\",\"Non-N-Non-N\",\"Che-R-Org-R\"))`\n",
     "\n",
     "ggplot(result, aes(covariate, value, color=name, shape=name))+\n",
     "  geom_point(size=1)+\n",
@@ -526,7 +525,7 @@
     "} %>% data.frame()\n",
     "\n",
     "colnames(result) <- rep(categories[1:4], each = 4)\n",
-    "rownames(result) <- meta_soil$Name[match(targets, meta_soil$Feature)]\n",
+    "`rownames(result) <- meta_soil$Name[match(targets, meta_soil$Feature)]`\n",
     "\n",
     "fdr <- apply(result[,seq(2, ncol(result), by=4)], 2, function(x) p.adjust(x, method=\"BH\"))\n",
     "\n",
@@ -546,17 +545,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load <- readRDS(\"NTT_Data_norm_2021_2022_latest.rds\")\n",
-    "data <- load$data_integrated_norm_2021_2022\n",
-    "meta <- load$features_integrated_norm_2021_2022\n",
-    "ids <- read.csv(\"Experiment_ID.csv\")\n",
+    "`load <- readRDS(\"NTT_Data_norm_2021_2022_latest.rds\")`\n",
+    "`data <- load$data_integrated_norm_2021_2022`\n",
+    "`meta <- load$features_integrated_norm_2021_2022`\n",
+    "`ids <- read.csv(\"Experiment_ID.csv\")`\n",
     "\n",
-    "id <- c(ids$ID)[ids$Experiment == \"Kainan\" & !is.na(ids$Replicate) & ids$Sample == \"fruit\"]\n",
+    "`id <- c(ids$ID)[ids$Experiment == \"Kainan\" & !is.na(ids$Replicate) & ids$Sample == \"fruit\"]`\n",
     "\n",
     "df <- left_join(data[data$Sample_ID %in% id, ], ids[, -c(4,5)], by=c(\"Sample_ID\" = \"ID\"))\n",
     "\n",
-    "df$Category <- ifelse(df$Category == \"C_Che_M_F_Hyb_M\", 0, 1)\n",
-    "df$Year <- ifelse(df$Year == \"2021\", 0, 1)\n",
+    "`df$Category <- ifelse(df$Category == \"C_Che_M_F_Hyb_M\", 0, 1)`\n",
+    "`df$Year <- ifelse(df$Year == \"2021\", 0, 1)`\n",
     "\n",
     "setup_parallel()\n",
     "\n",
@@ -586,10 +585,10 @@
     "} %>% data.frame()\n",
     "\n",
     "\n",
-    "rownames(v2) <- meta$Name[match(targets, meta$Feature)]\n",
+    "`rownames(v2) <- meta$Name[match(targets, meta$Feature)]`\n",
     "colnames(v2) <- c(\"Effect\", \"pvalue\", \"ci_lower\", \"ci_upper\")\n",
     "\n",
-    "v2$fdr <- p.adjust(v2$pvalue, method = \"BH\")\n",
+    "`v2$fdr <- p.adjust(v2$pvalue, method = \"BH\")`\n",
     "\n",
     "saveRDS(v2, file = \"NTT_model_Kainan_result.rds\")\n"
    ]
@@ -597,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7c758d99",
+   "id": "cd7a28e3",
    "metadata": {},
    "outputs": [
     {
@@ -626,8 +625,8 @@
     "model_result <- readRDS(\"NTT_model_Kainan_result.rds\")\n",
     "colnames(model_result) <- c(\"Effect\",\"pvalue\",\"ci_lower\",\"ci_upper\",\"FDR\")\n",
     "\n",
-    "x <- data.frame(target = meta_soil$Name[match(targets, meta_soil$Feature)], \n",
-    "                type = meta_soil$Category[match(targets,meta_soil$Feature)])\n",
+    "`x <- data.frame(target = meta_soil$Name[match(targets, meta_soil$Feature)],`\n",
+    "                `type = meta_soil$Category[match(targets,meta_soil$Feature)])`\n",
     "\n",
     "df <- cbind(x, name = rep(n[1], nrow(x)), cohort_result[, 1:5]) %>%\n",
     "  rbind(cbind(x, name = rep(n[6], nrow(x)), cohort_result[, 6:10])) %>%\n",
@@ -637,25 +636,25 @@
     "\n",
     "rownames(df) <- NULL\n",
     "\n",
-    "df <- df[df$target %in% unique(df$target)[1:69][-c(18, 37, 38, 40, 41)],]\n",
-    "x <- x[x$target %in% unique(x$target)[1:69][-c(18, 37, 38, 40, 41)],]\n",
+    "`df <- df[df$target %in% unique(df$target)[1:69][-c(18, 37, 38, 40, 41)],]`\n",
+    "`x <- x[x$target %in% unique(x$target)[1:69][-c(18, 37, 38, 40, 41)],]`\n",
     "\n",
-    "df$signif_p <- ifelse(df$pvalue > 0.05, \"\",\n",
+    "`df$signif_p <- ifelse(df$pvalue > 0.05, \"\",`\n",
     "                             ifelse(df$pvalue > 0.01, \"*\",\n",
     "                                    ifelse(df$pvalue > 0.001, \"**\", \"***\"))) \n",
-    "df$signif_fdr <- ifelse(df$FDR > 0.05, \"\",\n",
+    "`df$signif_fdr <- ifelse(df$FDR > 0.05, \"\",`\n",
     "                             ifelse(df$FDR > 0.01, \"*\",\n",
     "                                    ifelse(df$FDR > 0.001, \"**\", \"***\"))) \n",
     "  \n",
-    "df$target <- factor(df$target, levels = rev(unique(df$target))[c(1:62, 64, 63)])\n",
-    "x$target <- factor(x$target, levels = rev(x$target)[c(1:62, 64, 63)])\n",
+    "`df$target <- factor(df$target, levels = rev(unique(df$target))[c(1:62, 64, 63)])`\n",
+    "`x$target <- factor(x$target, levels = rev(x$target)[c(1:62, 64, 63)])`\n",
     "\n",
     "name_colors <- c(\"CC-OC\" = '#77AADD', \"OC-OC\" = '#99DDFF', \"CR-OR\" = '#BBCC33', \"NN-NN\" = '#EEDD88')\n",
-    "df$name <- factor(df$name,\n",
+    "`df$name <- factor(df$name,`\n",
     "                  levels=c(\"C_Che_M_F_Org_M\", \"C_Org_M_F_Org_M\", \"C_Non_N_F_Non_N\", \"C_Che_S_F_Org_S\", \"C_Che_S_F_Org_S (paired)\"),\n",
     "                  labels=c(\"Che-C-Org-C\", \"Org-C-Org-C\", \"Non-N-Non-N\", \"Che-R-Org-R\",\"Paied field\"))\n",
     "\n",
-    "x$type <- factor(x$type, levels=rev(unique(x$type)),\n",
+    "`x$type <- factor(x$type, levels=rev(unique(x$type)),`\n",
     "                 labels = c(\"Function\", \"Fungi genus\", \"Bacteria genus\", \"Fungi diversity\", \"Bacteria diversity\", \"Soil ion\", \"Soil chemical\\nproperties\", \"Fruit quality\"))\n",
     "\n",
     "pal <- c('#FFAABB','#BBCC33','#AAAA00','#EEDD88','#44BB99','#77AADD', '#99DDFF','#EE8866')\n",
