--- a/script/data_analysis.ipynb
+++ b/script/data_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "c187e777",
+   "execution_count": null,
+   "id": "16474d22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "options(warn = -1)\n",
+    "# options(warn = -1)\n",
     "options(repr.plot.width = 10, repr.plot.height = 8)\n",
     "\n",
     "library(tidyverse)\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "cd7a28e3",
+   "id": "eae7d581",
    "metadata": {},
    "outputs": [
     {
